unpackaged/main/default/objects/Daily_Claim__c/Daily_Claim__c.object-meta.xml
<CustomObject>
    <label>Daily Claim</label>
    <nameField>
        <displayFormat>DC-{0000000}</displayFormat>
        <label>Daily Claim Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>