unpackaged/main/default/objects/Daily_Claim__c/fields/Adjudication_Date__c.field-meta.xml
<CustomField>
    <fullName>Adjudication_Date__c</fullName>
    <description>The date that the claim was completed out of the adjudication system.</description>
    <inlineHelpText>The date that the claim was completed out of the adjudication system.</inlineHelpText>
    <label>Adjudication Date</label>
    <type>Date</type>
</CustomField>