unpackaged/main/default/objects/Daily_Claim__c/fields/Allowable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Allowable_Amount__c</fullName>
    <label>Allowable Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>