unpackaged/main/default/objects/Daily_Claim__c/fields/Amount_Paid_By_Primary__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid_By_Primary__c</fullName>
    <label>Amount Paid By Primary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>