unpackaged/main/default/objects/Daily_Claim__c/fields/Authorized_Representative_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Representative_Relationship__c</fullName>
    <label>Authorized Representative Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>