unpackaged/main/default/objects/Daily_Claim__c/fields/Billing_Provider_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_Specialty__c</fullName>
    <label>Billing Provider Specialty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>