unpackaged/main/default/objects/Daily_Claim__c/fields/Billing_Provider_Street_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_Street_Address_Line_1__c</fullName>
    <label>Billing Provider Street Address Line 1</label>
    <type>TextArea</type>
</CustomField>