unpackaged/main/default/objects/Daily_Claim__c/fields/Billing_Provider_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_Zip_Code__c</fullName>
    <label>Billing Provider Zip Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>