unpackaged/main/default/objects/Daily_Claim__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Daily Claims</relationshipLabel>
    <relationshipName>Daily_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>