unpackaged/main/default/objects/Daily_Claim__c/fields/Claim_Line__c.field-meta.xml
<CustomField>
    <fullName>Claim_Line__c</fullName>
    <label>Claim Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>