unpackaged/main/default/objects/Daily_Claim__c/fields/Contact_Drug__c.field-meta.xml
<CustomField>
    <fullName>Contact_Drug__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Drug</label>
    <referenceTo>Contact_Drug__c</referenceTo>
    <relationshipLabel>Daily Claims</relationshipLabel>
    <relationshipName>Daily_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>