unpackaged/main/default/objects/Daily_Claim__c/fields/CSA_Number__c.field-meta.xml
<CustomField>
    <fullName>CSA_Number__c</fullName>
    <description>SHA1 has number created from Control+Suffix+Account</description>
    <label>CSA Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>