unpackaged/main/default/objects/Daily_Claim__c/fields/EOP_Date__c.field-meta.xml
<CustomField>
    <fullName>EOP_Date__c</fullName>
    <label>EOP Date</label>
    <type>Date</type>
</CustomField>