unpackaged/main/default/objects/Daily_Claim__c/fields/Error_Log__c.field-meta.xml
<CustomField>
    <fullName>Error_Log__c</fullName>
    <description>If HCPCS does not exist on Drug object, then don’t process record and set:
     - Status [NEW FIELD] to “Error”
     - Error Log [NEW FIELD] to “HCPCS Mismatch.” Dependent and connected to the Status field.</description>
    <label>Error Log</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>HCPCS Mismatch</fullName>
            </value>
            <value>
                <fullName>CSA Mismatch</fullName>
            </value>
            <value>
                <fullName>Previous segment not found</fullName>
            </value>
            <value>
                <fullName>Unable to create record due to duplicate.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>