unpackaged/main/default/objects/Daily_Claim__c/fields/Funding_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Funding_Indicator__c</fullName>
    <label>Funding Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>