unpackaged/main/default/objects/Daily_Claim__c/fields/ICD9_Procedure_Code__c.field-meta.xml
<CustomField>
    <fullName>ICD9_Procedure_Code__c</fullName>
    <label>ICD9 Procedure Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>