unpackaged/main/default/objects/Daily_Claim__c/fields/Name_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Name_Type_Code__c</fullName>
    <description>A code which classifies a Provider as an individual or non-individual ( such as facility, or Provider Organization). This is the Name Type associated with the Rendering (Servicing) Provider.
I = Individual
N = Non-Individual 
spaces = undetermined</description>
    <label>Name Type Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>