unpackaged/main/default/objects/Daily_Claim__c/fields/Name_Type_Code_Translation__c.field-meta.xml
<CustomField>
    <fullName>Name_Type_Code_Translation__c</fullName>
    <formula>CASE( Name_Type_Code__c ,
&quot;I&quot;, &quot;Individual&quot;,
&quot;N&quot;, &quot;Non-Individual&quot;,
&quot;Undetermined&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name Type Code Translation</label>
    <type>Text</type>
</CustomField>