unpackaged/main/default/objects/Daily_Claim__c/fields/NDC__c.field-meta.xml
<CustomField>
    <fullName>NDC__c</fullName>
    <label>NDC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>