unpackaged/main/default/objects/Daily_Claim__c/fields/Patient_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Patient_Address_Line_1__c</fullName>
    <label>Patient Address Line 1</label>
    <type>TextArea</type>
</CustomField>