unpackaged/main/default/objects/Daily_Claim__c/fields/Patient_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Patient_Address_Line_2__c</fullName>
    <label>Patient Address Line 2</label>
    <type>TextArea</type>
</CustomField>