unpackaged/main/default/objects/Daily_Claim__c/fields/Patient_City__c.field-meta.xml
<CustomField>
    <fullName>Patient_City__c</fullName>
    <label>Patient City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>