unpackaged/main/default/objects/Daily_Claim__c/fields/Patient_Gender__c.field-meta.xml
<CustomField>
    <fullName>Patient_Gender__c</fullName>
    <label>Patient Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
                <isActive>false</isActive>
                <label>Female</label>
            </value>
            <value>
                <fullName>Male</fullName>
                <isActive>false</isActive>
                <label>Male</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>