unpackaged/main/default/objects/Daily_Claim__c/fields/Patient_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Last_Name__c</fullName>
    <label>Patient Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>