unpackaged/main/default/objects/Daily_Claim__c/fields/Patient_Sex__c.field-meta.xml
<CustomField>
    <fullName>Patient_Sex__c</fullName>
    <label>Patient Sex</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Male</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>