unpackaged/main/default/objects/Daily_Claim__c/fields/Plan_Sponsor_Name__c.field-meta.xml
<CustomField>
    <fullName>Plan_Sponsor_Name__c</fullName>
    <description>&quot;The name of the policy holder
CMT:  Also known as Customer, Plan Sponsor&quot;</description>
    <label>Plan Sponsor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>