unpackaged/main/default/objects/Daily_Claim__c/fields/Policy_Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>Policy_Holder_Name__c</fullName>
    <label>Policy Holder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>