unpackaged/main/default/objects/Daily_Claim__c/fields/Previous_Claim__c.field-meta.xml
<CustomField>
    <fullName>Previous_Claim__c</fullName>
    <label>Previous Claim</label>
    <length>255</length>
    <type>Text</type>
</CustomField>