unpackaged/main/default/objects/Daily_Claim__c/fields/Previous_Segment__c.field-meta.xml
<CustomField>
    <fullName>Previous_Segment__c</fullName>
    <label>Previous Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>