unpackaged/main/default/objects/Daily_Claim__c/fields/Primary_Claim_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_Claim_Number__c</fullName>
    <label>Primary Claim Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>