unpackaged/main/default/objects/Daily_Claim__c/fields/Provider_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Provider_Indicator__c</fullName>
    <label>Provider Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>