unpackaged/main/default/objects/Daily_Claim__c/fields/Prudent_In_Data_Staging_ID__c.field-meta.xml
<CustomField>
    <fullName>Prudent_In_Data_Staging_ID__c</fullName>
    <description>ID used to determine JSON payload has already been inserted or not to determine when to upsert each record.</description>
    <label>Prudent In Data Staging ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>