unpackaged/main/default/objects/Daily_Claim__c/fields/Relationship_Code__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Code__c</fullName>
    <description>A code which identifies the patient&#39;s relationship to the member</description>
    <label>Relationship Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>