unpackaged/main/default/objects/Daily_Claim__c/fields/Service_From_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_From_Date__c</fullName>
    <label>Service From Date</label>
    <type>Date</type>
</CustomField>