unpackaged/main/default/objects/Daily_Claim__c/fields/Servicing_Provider_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Servicing_Provider_Address_Line_1__c</fullName>
    <label>Servicing Provider Address Line 1</label>
    <type>TextArea</type>
</CustomField>