unpackaged/main/default/objects/Daily_Claim__c/fields/Servicing_Provider_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Servicing_Provider_Last_Name__c</fullName>
    <label>Servicing Provider Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>