unpackaged/main/default/objects/Daily_Claim__c/fields/Servicing_Provider_Service_Location_Zip__c.field-meta.xml
<CustomField>
    <fullName>Servicing_Provider_Service_Location_Zip__c</fullName>
    <label>Servicing Provider Service Location Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>