unpackaged/main/default/objects/Daily_Claim__c/fields/Servicing_Provider_State_Code__c.field-meta.xml
<CustomField>
    <fullName>Servicing_Provider_State_Code__c</fullName>
    <label>Servicing Provider State Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>