unpackaged/main/default/objects/Daily_Claim__c/fields/Subscriber_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Address_Line_2__c</fullName>
    <label>Subscriber Address Line 2</label>
    <type>TextArea</type>
</CustomField>