unpackaged/main/default/objects/Daily_Claim__c/fields/Subscriber_City__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_City__c</fullName>
    <label>Subscriber City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>