unpackaged/main/default/objects/Daily_Claim__c/fields/Subscriber_CUMB_ID__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_CUMB_ID__c</fullName>
    <label>Subscriber CUMB ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>