unpackaged/main/default/objects/Daily_Claim__c/fields/Subscriber_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Zip_Code__c</fullName>
    <label>Subscriber Zip Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>