unpackaged/main/default/objects/Daily_Claim__c/fields/Total_Coinsurance__c.field-meta.xml
<CustomField>
    <fullName>Total_Coinsurance__c</fullName>
    <label>Total Coinsurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>