unpackaged/main/default/objects/Daily_Claim__c/fields/Total_Coinsurance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Coinsurance_Amount__c</fullName>
    <label>Total Coinsurance Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>