unpackaged/main/default/objects/Daily_Claim__c/fields/Total_Copay_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Copay_Amount__c</fullName>
    <label>Total Copay Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>