unpackaged/main/default/objects/Daily_Claim__c/fields/Total_Deductible_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Deductible_Amount__c</fullName>
    <label>Total Deductible Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>