unpackaged/main/default/objects/Daily_Claim__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Claim_Information__c</columns>
    <columns>CSA_Number__c</columns>
    <columns>Primary_Claim_Number__c</columns>
    <columns>Patient_CUMB_ID__c</columns>
    <columns>Previous_Segment__c</columns>
    <columns>Claim_Segment__c</columns>
    <columns>Claim_Line__c</columns>
    <columns>Patient_Last_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Error_Log__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>